Fixed Alignment Propblem in Nav

--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -11,7 +11,12 @@
         display: flex;
         align-items: center;
         justify-content: space-between;
+        
+        h1{
+            margin: 1rem, 0, 0.2rem, 0;
+            padding-left: 2rem;
 
+        }
 
         .header--searchContainer{
             width: 500px;
