--- a/src/components/Header/nav/Navigation.scss
+++ b/src/components/Header/nav/Navigation.scss
@@ -6,6 +6,10 @@
     flex-direction: row;
     list-style: none;
     background-color: white;
+    padding: 0;
+    padding-left: 12px;
+    margin-top: 0px;
+    margin-bottom: 0px;
     
 }
 
@@ -13,11 +17,13 @@
 .header--nav--mainCategories{
 
 
-
      p {
 
         padding-left: 20px;
         padding-right: 20px;
+        padding-top: 0;
+        padding-bottom: 0.5rem;
+        margin: 0;
         font-size: 1.5rem;
         font-weight: bold;
         color: rgb(52,52,52,);
